@@ -2,6 +2,7 @@ v0.3.3 ()
   New features
 	* Tries to find calcerb.rb next to the executable.
 	* Started cleaning imports ...
+	* It is now possible to write "top level" functions in lua.
   Bugs fixed
 	* Fixed a ton of problems related to exported resources and relations.
 	* Minor fix about zonerecord.
